# Vex-Robotics-judging-software

./: Common.py  Excellent_criteria.ipynb  README.md  app.py  generate_initial_database.ipynb  generate_schedule.py  generate_schedule_v2.py  judging_database.db  pyproject.toml  robot_events_api.py  test_doc.ipynb  update_notebook_links.py
data/: RE-VIQRC-24-6493-Teams-2025-11-21.xls  RE-VIQRC-24-6495-Teams-2025-11-21.xls
pages/: Print_Student.py  Print_judges.py  display_Judges.py  display_Student.py  home.py  main_judges_v2.py
